2011-04-01  vadim  <vadim@netcitadel.com>

	* FWObject.cpp (shallowDuplicate): see #2286 "Crash when closing
	file". The GUI crashed if user imported iptables or pix
	configuration, then deleted a rule and tried to close project
	window.

	* PIXImporter.cpp (mirrorServiceObjectRecursively): see #2291 The
	same service object-group that matches some tcp or udp ports can
	be used to match both source and destination ports in an
	access-list command. Importer should recognize when such group
	is used to match source ports and create mirrored group with
	potentially mirrored service objects. This should work when group
	includes other groups.

	* FWWindow_editor.cpp (openOptEditor): fixes #2307 "GUI switches
	to another file after editor panel is closed"

2011-03-31  vadim  <vadim@netcitadel.com>

	* parsers/pix.g (http_command): see #2164 fixed import of "ssh"
	commands and added import of "http" commands

	* objectMaker.h (ObjectMakerErrorTracker): see #2302 Importer
	should log and continue when it encounters an error. This matches
	its behavior in older versions and makes it more resilient to
	changes in target platform firewall languages. Rule that had an
	error or unrecognized syntax in it should be marked by changing
	its color to red and an explanation should be added to its
	comment.

	* PIXImporterNat.cpp (buildSNATRule): import of PIX/ASA "global"
	and "nat" commands works.

2011-03-30  vadim  <vadim@netcitadel.com>

	* PIXImporterNat.cpp (buildDNATRule): import of PIX/ASA "static"
	commands works for the most part. Needs more testing.

2011-03-28  vadim  <vadim@netcitadel.com>

	* ObjectManipulator.cpp (getDeleteMenuState): see #2226 fixed GUI
	crash that happened when user tried to delete or cut an object
	from locked library.

	* RuleOptionsDialog.cpp (loadFWObject): see #2230 the GUI should
	allow limit-burst values of up to 10000

2011-03-27  vadim  <vadim@netcitadel.com>

	* import/PIXImporter.cpp (addLogging): see #2279 Support for import